stuffkeepericon16dir= $(datadir)/icons/hicolor/16x16/actions
stuffkeepericon16_DATA =\
						16/stuffkeeper.png

stuffkeepericon48dir= $(datadir)/icons/hicolor/48x48/actions
stuffkeepericon48_DATA =\
						48/stuffkeeper.png

stuffkeepericon64dir= $(datadir)/icons/hicolor/64x64/actions
stuffkeepericon64_DATA =\
						64/stuffkeeper.png

stuffkeepericonscalabledir= $(datadir)/icons/hicolor/scalable/actions
stuffkeepericonscalable_DATA =\
						scalable/stuffkeeper.svg

stuffkeepericoninterndir= $(datadir)/stuffkeeper/icons/hicolor/16x16/actions
stuffkeepericonintern_DATA =\
							internet-mail.png\
							internet-web-browser.png
